--- a/dungeon/dungeon.vcxproj
+++ b/dungeon/dungeon.vcxproj
@@ -149,14 +149,20 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BspDungeon.h" />
     <ClInclude Include="Direction.h" />
+    <ClInclude Include="Dungeon.h" />
     <ClInclude Include="Field.h" />
+    <ClInclude Include="genoptions.h" />
+    <ClInclude Include="RandEngine.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Tiles.h" />
     <ClInclude Include="Vec.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BspDungeon.cpp" />
     <ClCompile Include="Direction.cpp" />
     <ClCompile Include="dungeon.cpp" />
     <ClCompile Include="stdafx.cpp">
